--- a/learnix/index.html
+++ b/learnix/index.html
@@ -7,186 +7,110 @@
     <title>learNIX</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300&display=swap&subset=cyrillic" rel="stylesheet"> 
     <style>
-        html,
-        body {
-            height: 100%;
-        }
-        
-        body {
-            margin: 0;
-            display: flex;
-            font-size: 1em;
-            font-family: 'Roboto Mono', monospace;
-            text-align: center;
-            background-color: whitesmoke;
-        }
-
-        a {
-            color: black;
-            text-decoration: none;
-        }
-
-        .column {
-            display: flex;
-            flex-direction: column;
-        }
-
-        .title {
-            line-height: 50px;
-            height: 50px;
-            color: white;
-        }
-
-        .sidebar {
-            width: 25%;
-        }
-
-        .material-title {
-            background-color: darkslateblue;
-        }
-
-        .material-item {
-            cursor: pointer;
-            line-height: 50px;
-            border-bottom: 1px solid rgba(0, 0, 0, .2);
-        }
-
-        .material-item:not(.selected):hover {
-            color: white;
-            background-color: lightcoral;
-        }
-
-        .material-item.selected {
-            color: white;
-            background-color: dodgerblue;
-            cursor: auto;
-        }
-
-        .main {
-            flex: 1;
-            box-shadow: inset 0 0 15px -10px #000;
-            
-        }
-
-        .main-title {
-            background-color: darkorange;
-        }
-
-        .main-content {
-            flex: 1;
-            overflow-y: auto;
-        }
-
-        .main-item {
-            display: flex;
-            font-size: .9em;
-        }
-
-        .main-item {
-            border-bottom: 10px solid whitesmoke;
-        }
-
-        .main-item:last-child {
-            border-bottom: none;
-        }
-
-        .main-info {
-            flex: 0.25;
-            padding: 12.5px;
-            background-color: bisque;
-        }
-
-        .main-info__from {
-            margin-top: 10px;
-        }
-
-        .main-info__from::before {
-            content: 'от: ';
-        }
-
-        .main-data {
-            padding: 12.5px;
-            background-color: blanchedalmond;
-            text-align: start;
-        }
-
-        .main-data__item {
-            margin-bottom: 10px;
-        }
-
-        .main-data__item:last-child {
-            margin-bottom: 0;
-        }
-
-        .data-link {
-            color: brown;
-        }
-
-        .data-link:last-child {
-            margin-bottom: 0;
-        }
-
-        .data-link::after {
-            content: attr(href);
-        }
-
-        .github-title {
-            background-color: teal;
-        }
-
-        .github-info {
-            flex: 1;
-            text-align: start;
-            overflow-y: auto;
-        }
-
-        .github-info__person {
-            padding: 12.5px 20px;
-            cursor: pointer;
-            border-bottom: 1px solid rgba(0, 0, 0, .2);
-        }
-
-        .github-info__person:hover {
-            background-color: lightcoral;
-        }
-
-        .github-info__person:hover .github-info__link {
-            color: white;
-        }
-
-        .github-info__sur-name {
-            display: block;
-            font-size: 1.1em;
-        }
-
-        .github-info__uname {
-            font-size: .9em;
-        }
+        body,html{height:100%}body{margin:0;display:flex;font-size:1em;font-family:'Roboto Mono',monospace;text-align:center;background-color:#f5f5f5}ul{list-style-type:none;margin:0;padding:0}a{color:#000;text-decoration:none}::-webkit-scrollbar{width:7px;background-color:#e8e8e8}::-webkit-scrollbar-thumb{background-color:#c8c8c8}.column{display:flex;flex-direction:column}.title{line-height:50px;height:50px;color:#fff}.sidebar{width:25%}.menu-title{background-color:#483d8b}.menu-item{cursor:pointer;line-height:50px;border-bottom:1px solid rgba(0,0,0,.2)}.menu-item .menu-item{border-color:transparent}.menu-item.expand{border-color:rgba(30,144,255,.7)}.menu-item.expand .menu-item.expand{border-color:rgba(0,0,0,.2)}.menu-link{display:block}.menu-link:not(.selected):hover{color:#fff;background-color:#f08080}.menu-list .menu-link.selected{color:#fff;background-color:#1e90ff;cursor:auto}.menu-list .menu-list .menu-link.selected{background-color:#6fb8ff}.menu-list .menu-list .menu-list .menu-link.selected{background-color:#a3d1ff}.menu-link+.menu-list{display:none}.menu-link.selected+.menu-list{display:block}.main{flex:1;box-shadow:inset 0 0 15px -12px #000}.main-title{background-color:#ff8c00}.main-content{flex:1;display:none;overflow-y:auto;scrollbar-width:thin}.main-content.show{display:flex}.main-item{display:flex;font-size:.9em}.main-item{border-bottom:10px solid #f5f5f5}.main-item:last-child{border-bottom:none}.main-info{flex:.25;padding:12.5px;background-color:bisque}.main-info__from::before{content:'от: '}.main-date{margin-bottom:10px}.main-data{flex:auto;padding:12.5px;background-color:#ffebcd;text-align:start;word-break:break-word}.main-data__item{margin-bottom:10px}.main-data__item:last-child{margin-bottom:0}.data-message__title{display:block;font-weight:700;margin-bottom:10px}.data-link{color:brown}.data-link:last-child{margin-bottom:0}.data-link::after{content:attr(href)}.github-title{background-color:teal}.github-info{flex:1;text-align:start;overflow-y:auto;scrollbar-width:thin}.github-info__person{padding:12.5px 20px;cursor:pointer;border-bottom:1px solid rgba(0,0,0,.2)}.github-info__person:hover{background-color:#f08080}.github-info__person:hover .github-info__link{color:#fff}.github-info__sur-name{display:block;font-size:1.1em}.github-info__uname{font-size:.9em}
     </style>
 </head>
 <body>
-    <sidebar class="material sidebar">
-        <div class="material-title title">Меню</div>
-        <div class="material-item selected">
-            <span class="material-item__text">Основной материал</span>
-        </div>
-        <div class="material-item">
-            <span class="material-item__text">Доп. материал</span>
-        </div>
-        <div class="material-item">
-                <span class="material-item__text">Инструменты</span>
-        </div>
+    <sidebar class="menu sidebar">
+        <div class="menu-title title">Меню</div>
+        <ul class="menu-list">
+            <li class="menu-item">
+                <a class="menu-link">Основной материал</a>
+                <ul class="menu-list">
+                    <li class="menu-item">
+                        <a class="menu-link">JavaScript</a>
+                        <ul class="menu-list">
+                            <li class="menu-item"><a class="menu-link">Angular</a></li>
+                            <li class="menu-item"><a class="menu-link">React</a></li>
+                        </ul>
+                    </li>
+                    <li class="menu-item">
+                        <a class="menu-link" data-content-id="main-material-html-css">HTML / CSS</a>
+                    </li>
+                </ul>
+            </li>
+            <li class="menu-item"><a class="menu-link">Доп. материал</a></li>
+            <li class="menu-item">
+                <a class="menu-link">Инструменты</a>
+                <ul class="menu-list">
+                    <li class="menu-item">
+                        <a class="menu-link" data-content-id="tools-animation">Анимация</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="menu-link" data-content-id="tools-optimization">Оптимизация</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="menu-link" data-content-id="tools-templates">Шаблоны</a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
     </sidebar>
     <main class="main column">
-        <div class="main-title title">Основной материал</div>
-        <div class="main-content column">
+        <div class="main-title title"></div>
+        <div id="tools-templates" class="main-content column">
+            <div class="main-item">
+                <div class="main-data column">
+                    <span class="main-data__item data-message">
+                        <span class="data-message__title">Email Framework</span>
+                        Фреймворк для создания отзывчивых (responsive) HTML email шаблонов
+                    </span>
+                    <a class="main-data__item data-link" href="https://emailframe.work/" target="_blank"></a>
+                </div>
+            </div>
+            <div class="main-item">
+                <div class="main-data column">
+                    <span class="main-data__item data-message">
+                        <span class="data-message__title">Bourbon</span>
+                        Библиотека миксов и функций на чистом SASS
+                    </span>
+                    <a class="main-data__item data-link" href="https://www.bourbon.io/" target="_blank"></a>
+                    <span class="main-data__item data-message">
+                        Материал по теме:
+                    </span>
+                    <a class="main-data__item data-link" href="http://prgssr.ru/development/nachinaem-rabotu-s-sass-i-bourbon.html" target="_blank"></a>
+                </div>
+            </div>
+        </div>
+        <div id="tools-animation" class="main-content column">
+            <div class="main-item">
+                <div class="main-data column">
+                    <span class="main-data__item data-message">
+                        <span class="data-message__title">Animate.css</span>
+                        Набор готовых CSS анимаций
+                    </span>
+                    <a class="main-data__item data-link" href="https://daneden.github.io/animate.css/" target="_blank"></a>
+                </div>
+            </div>
+            <div class="main-item">
+                <div class="main-data column">
+                    <span class="main-data__item data-message">
+                        <span class="data-message__title">WOW.js</span>
+                        JavaScript библиотека для динамичной анимации
+                    </span>
+                    <a class="main-data__item data-link" href="https://wowjs.uk/" target="_blank"></a>
+                </div>
+            </div>
+        </div>
+        <div id="tools-optimization" class="main-content column">
+            <div class="main-item">
+                <div class="main-data column">
+                    <span class="main-data__item data-message">
+                        <span class="data-message__title">Tiny PNG</span>
+                        Сервис сжатия .png и .jpg изображений
+                    </span>
+                    <a class="main-data__item data-link" href="https://tinypng.com/" target="_blank"></a>
+                </div>
+            </div>
+        </div>
+        <div id="main-material-html-css" class="main-content column">
             <div class="main-item">
                 <div class="main-info column">
                     <div class="main-date column">
                         <span class="main-date__item date-day">Четверг</span>
                         <span class="main-date__item date-dmy">28.11.2019</span>
                     </div>
-                    <span class="main-info__from"><a href="https://github.com/Ivanischev" target="_blank">Ivan Ivanischev</a></span>
+                    <span class="main-info__from"><a href="https://t.me/Ivanischev_Ivan" target="_blank">Ivan Ivanischev</a></span>
                 </div>
                 <div class="main-data column">
                     <span class="main-data__item data-message">
@@ -195,7 +119,6 @@
                     </span>
                     <a class="main-data__item data-link" href="https://docs.google.com/document/d/1kSRpixjOHEhPE_LXdZsuoqBLnktTvjNJcjKet3IjMMI/edit" target="_blank"></a>
                     <a class="main-data__item data-link" href="https://habrahabr.ru/post/252279/" target="_blank"></a>
-                    <a class="main-data__item data-link" href="https://emailframe.work/#buttons" target="_blank"></a>
                 </div>
             </div>
             <div class="main-item">
@@ -204,7 +127,7 @@
                         <span class="main-date__item date-day">Вторник</span>
                         <span class="main-date__item date-dmy">26.11.2019</span>
                     </div>
-                    <span class="main-info__from"><a href="https://github.com/Ivanischev" target="_blank">Ivan Ivanischev</a></span>
+                    <span class="main-info__from"><a href="https://t.me/Ivanischev_Ivan" target="_blank">Ivan Ivanischev</a></span>
                 </div>
                 <div class="main-data column">
                     <a class="main-data__item data-link" href="https://docs.google.com/document/d/17WwjikLKUGrg-pDUw2SuqscBpYxnxTTcWsIhbKlXgho/edit#" target="_blank"></a>
@@ -216,7 +139,7 @@
                         <span class="main-date__item date-day">Четверг</span>
                         <span class="main-date__item date-dmy">21.11.2019</span>
                     </div>
-                    <span class="main-info__from"><a href="https://github.com/Ivanischev" target="_blank">Ivan Ivanischev</a></span>
+                    <span class="main-info__from"><a href="https://t.me/Ivanischev_Ivan" target="_blank">Ivan Ivanischev</a></span>
                 </div>
                 <div class="main-data column">
                     <a class="main-data__item data-link" href="https://docs.google.com/document/d/1W8scwv2UzA_OVmpJL9oA4HSiP4BUkLV5YAk0ItQC7ig/edit?usp=sharing" target="_blank"></a>
@@ -228,7 +151,7 @@
                         <span class="main-date__item date-day">Вторник</span>
                         <span class="main-date__item date-dmy">19.11.2019</span>
                     </div>
-                    <span class="main-info__from"><a href="https://github.com/Ivanischev" target="_blank">Ivan Ivanischev</a></span>
+                    <span class="main-info__from"><a href="https://t.me/Ivanischev_Ivan" target="_blank">Ivan Ivanischev</a></span>
                 </div>
                 <div class="main-data column">
                     <a class="main-data__item data-link" href="https://habr.com/ru/post/418923/" target="_blank"></a>
@@ -241,7 +164,7 @@
                         <span class="main-date__item date-day">Вторник</span>
                         <span class="main-date__item date-dmy">12.11.2019</span>
                     </div>
-                    <span class="main-info__from"><a href="https://github.com/Ivanischev" target="_blank">Ivan Ivanischev</a></span>
+                    <span class="main-info__from"><a href="https://t.me/Ivanischev_Ivan" target="_blank">Ivan Ivanischev</a></span>
                 </div>
                 <div class="main-data column">
                     <span class="main-data__item data-message">
@@ -280,7 +203,7 @@
             </div>
             <div class="github-info__person">
                 <a class="github-info__link" href="https://github.com/FireWall-e" target="_blank">
-                    <span class="github-info__sur-name">Владислав Слипченко</span>
+                    <span class="github-info__sur-name">Слипченко Владислав</span>
                     <span class="github-info__uname">@FireWall-e</span>
                 </a>
             </div>
@@ -364,5 +287,8 @@
             </div>
         </div>
     </sidebar>
+    <script>
+        const go={d:document.createElement("_"),eventBindAll:(e,t,s)=>{const n=document.querySelectorAll(e);for(e=0;e<n.length;e++)n[e].addEventListener(t,s)},get:e=>document.querySelector(e),getAll:e=>document.querySelectorAll(e)},navigateMenu=e=>{(e=e.target).classList.contains("selected")||go.getAll(".menu-item.expand").forEach(t=>{t.contains(e)||(t.classList.remove("expand"),t.childNodes.forEach(e=>{e.classList&&e.classList.remove("selected")}))}),e.classList.add("selected"),e.parentElement.classList.add("expand"),(go.get(".main-content.show")||go.d).classList.remove("show"),(go.get(`#${e.dataset.contentId}`)||go.d).classList.add("show")};go.eventBindAll(".menu-link","click",navigateMenu);
+    </script>
 </body>
 </html>
