--- a/learnix/index.html
+++ b/learnix/index.html
@@ -91,6 +91,15 @@
                     <a class="main-data__item data-link" href="https://wowjs.uk/" target="_blank"></a>
                 </div>
             </div>
+            <div class="main-item">
+                <div class="main-data column">
+                    <span class="main-data__item data-message">
+                        <span class="data-message__title">GreenSock</span>
+                        Плагин для анимации всего, что поддерживается JavaScript: CSS свойств, SVG, React, canvas, generic objects и т.д.
+                    </span>
+                    <a class="main-data__item data-link" href="https://greensock.com/" target="_blank"></a>
+                </div>
+            </div>
         </div>
         <div id="tools-optimization" class="main-content column">
             <div class="main-item">
