--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -56,7 +56,7 @@
 			text-align: center;
 			display: flex;
 			flex-direction: column;
-			overscroll-behavior: contain;
+			overscroll-behavior: none;
 		}
 
 		.background {
