--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -56,7 +56,7 @@
 			text-align: center;
 			display: flex;
 			flex-direction: column;
-			overscroll-behavior: none;
+			/*overscroll-behavior: none;*/
 		}
 
 		.background {
@@ -621,6 +621,7 @@
 				scrollArea.ontouchmove = touchMove;
 				scrollArea.ontouchend = touchEnd;
 				scrollArea.ontouchstart = touchStart;
+				scrollArea.style.overscrollBehavior = o.overscrollBehavior ? o.overscrollBehavior : 'none';
 				scrollbar = document.querySelector(o.scrollbar);
 				scrollbar.style.marginTop = '0px';
 				if (scrollbar.offsetTop !== content.offsetTop) scrollbar.style.marginTop = content.offsetTop + 'px';
