--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>АРХХАИЗМОЛОГ</title>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	<!-- <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap&subset=cyrillic" rel="stylesheet"> -->
 	<style>
@@ -56,7 +57,6 @@
 			text-align: center;
 			display: flex;
 			flex-direction: column;
-			/*overscroll-behavior: none;*/
 		}
 
 		.background {
@@ -110,7 +110,7 @@
 		.card {
 			cursor: pointer;
 			flex-basis: calc(50% - 10px);
-			height: calc(31.95% - 10px);
+			height: calc(30.8% - 10px);
   			box-sizing: border-box;
   			margin-bottom: 20px;
   			display: flex;
@@ -141,7 +141,8 @@
 
 		.card__image {
 			flex: 1;
-			width: 100%; 		
+			width: 100%;
+			background-size: 80% 80%;
 	 	}
 
 	 	.card__image_archaizmolog {
@@ -176,7 +177,7 @@
 	 		height: 100%;
 	 		width: 100%;
 	 		display: none;
-	 		font-size: 0.9em;
+	 		font-size: 0.8em;
 	 	}
 
 	 	[class*=show_article] .articles {
@@ -271,15 +272,9 @@
 			display: block;
 		}
 
-		/*Phone*/
+		/*Phone landscape*/
 
-		@media (min-width: 480px) {
-			.card {
-				height: calc(30.99% - 10px);
-			}
-    	}
-
-    	@media (min-width: 600px) {
+    	@media (min-width: 560px) {
 			p {
 				margin: 0 15% 4%;
 			}
@@ -287,53 +282,45 @@
 			.main {
 				margin: 0 20%;
 			}
+
+			.card {
+				height: calc(30% - 10px);
+			}
     	}
 
     	/*Tablet*/
 
-    	@media (min-width: 760px) and (orientation : portrait) {
-			p {
-				margin: 0 20% 4%;
-			}
-
+    	@media (min-width: 700px) 
+    	and (orientation : portrait) {
 			.main {
 				margin: 15% 0;
 			}
 
-			.articles {
-				font-size: 1em;
+			.body {
+				font-size: 1.4em;
 			}
     	}
 
-    	/*Desktop*/
+    	/*Desktop / Tablet landscape*/
 
-    	@media (min-width: 1080px)  {
-    		p {
-				margin: 0 15% 4%;
-			}
-
-			.body {
-				font-size: 0.9em;
+    	@media (min-width: 1000px)
+    	and (orientation : landscape)  {
+    		.body {
+				font-size: 1.1em;
 			}
 
 			.main {
-				margin: 0 25%;
-			}
-
-			.preview {
-				font-size: inherit;
+				margin: 0 15%;
 			}
 
 			.card {
 				height: calc(50% - 10px);
 			}
+    	}
 
-			.card__image {
-				background-size: 80% 80%;
-			}
-
-			.articles {
-				font-size: 1em;
+    	@media (min-width: 1200px)  {
+    		.main {
+				margin: 0 25%;
 			}
     	}
 	</style>
@@ -572,7 +559,6 @@
 				// scrolling = 1;
 				slider.classList.add('active');
 				touchStartY = e.touches[0].clientY;
-				console.log('touchstart', touchStartY);
 			};
 
 			const touchEnd = (e) => {
@@ -588,7 +574,6 @@
 				cancelAnimationFrame(watcher);
   				if (lastScrollHeight !== content.scrollHeight) {
     				slider.style.height = Math.ceil(100 * content.clientHeight / content.scrollHeight) + '%';
-    				console.log('content', content,'content.scrollHeight ', content.scrollHeight, 'content.clientHeight ', content.clientHeight);
     				if (scrollbar.classList.contains('active')) {
     					if (content.scrollHeight <= content.clientHeight) {
     						scrollbar.classList.remove('active');
