--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -253,7 +253,7 @@
 
 		.vscrollbar__slider {
 			margin: auto;
-			width: 4px;
+			width: 2px;
 			height: 20px;
 			background-color: #F5F5F5;
 			border-radius: 3px;
@@ -314,6 +314,10 @@
 
 			.card {
 				height: calc(50% - 10px);
+			}
+
+			.vscrollbar__slider {
+				width: 4px;
 			}
     	}
 
