--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -321,7 +321,11 @@
 			}
     	}
 
-    	@media (min-width: 1200px)  {
+    	@media (min-width: 1080px)  {
+    		.articles {
+    			font-size: 0.8em;
+    		}
+
     		.main {
 				margin: 0 25%;
 			}
