--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -1,339 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<title>АРХХАИЗМОЛОГ</title>
+	<title>Архаизмолог</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	<!-- <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap&subset=cyrillic" rel="stylesheet"> -->
 	<style>
-		html,
-		.body {
-			height: 100%;
-		}
-
-		button {
-			background: unset;
-			outline: none;
-			border: none;
-			padding: 0;
-			height: 100%;
-			cursor: pointer;
-		}
-
-		p {
-			margin: 0;
-			margin-bottom: 24px;
-			line-height: 1.6;
-			margin: 0 10% 4%;
-		}
-
-		p:last-child {
-			margin-bottom: 0;
-		}
-
-		i {
-			height: 100%;
-			width: 100%;
-			display: block;
-		}
-
-		.i {
-			background-size: 100% 100%;
-			background-position: center;
-			background-repeat: no-repeat;
-		}
-
-		.b {
-			font-weight: bold;
-		}
-
-		.body {
-			margin: 0;
-			color: #F5F5F5;
-			background-color: #000;
-			font-family: 'Montserrat', sans-serif;
-			font-size: 0.8em;
-			text-align: center;
-			display: flex;
-			flex-direction: column;
-		}
-
-		.background {
-			position: absolute;
-			height: 100%;
-			width: 100%;
-			z-index: -2;
-			filter: brightness(15%);
-		}
-
-		.background__image {
-			display: block;
-			height: 100%;
-		}
-
-		.background__image_default {
-			background-image: url(image/background/thereasontobehere.jpg);
-			/*background-image: url(image/background/fool.jpg);*/
-		}
-
-		.main {
-			display: flex;
-			margin: 20% 0;
-			padding: 20px 0 20px 20px;
-			height: 100%;
-			box-sizing: border-box;
-			background-color: rgba(0, 0, 0, .8);
-			box-shadow: 0px 0px 5px 0px #000;
-		}
-
-		.content {
-			display: flex;
-			width: 100%;
-			overflow: hidden;
-			position: relative;
-		}
-
-		.preview {
-			flex: 1;
-			display: flex;
-			flex-wrap: wrap;
-			align-content: baseline;
-			justify-content: space-between;
-			font-size: 0.8em;
-		}
-
-		[class*=show_article] .preview {
-	 		display: none;
-	 	}
-
-		.card {
-			cursor: pointer;
-			flex-basis: calc(50% - 10px);
-			height: calc(30.8% - 10px);
-  			box-sizing: border-box;
-  			margin-bottom: 20px;
-  			display: flex;
-  			flex-direction: column;
-			align-items: center;
-			position: relative;
-		}
-
-		.card > * {
-			pointer-events: none;
-		}
-
-		.card:hover::before {
-			content: '';
-			border-top: 2px solid #F5F5F5;
-			top: 0;
-			position: absolute;
-			width: 100%;
-		}
-
-		.card:hover .card__title {
-			color: #F5DEB3;
-		}
-
-		.card_single {
-			margin-left: 25%;
-		}
-
-		.card__image {
-			flex: 1;
-			width: 100%;
-	 	}
-
-	 	.card__image_archaizmolog {
-	 		background-image: url(image/preview/archaizmolog.svg);
-	 	}
-
-	 	.card__image_krepost {
-	 		background-image: url(image/preview/krepost.svg);
-	 	}
-
-	 	.card__image_podih {
-	 		background-image: url(image/preview/podih.svg);
-	 	}
-
-	 	.card__image_poslednij-got {
-	 		background-image: url(image/preview/poslednij-got.svg);
-	 	}
-
-	 	.card__image_penie-divno {
-	 		background-image: url(image/preview/penie-divno.svg);
-	 	}
-
-	 	.card__title {
-	 		/*height: 15%;*/
-	 		display: flex;
-	 		align-items: center;
-	 		text-transform: uppercase;
-	 	}
-
-	 	.articles {
-	 		position: absolute;
-	 		height: 100%;
-	 		width: 100%;
-	 		display: none;
-	 		font-size: 0.85em;
-	 	}
-
-	 	[class*=show_article] .articles {
-	 		display: block;
-	 	}
-
-	 	.article {
-	 		display: none;
-	 		flex-direction: column;
-	 		height: 100%;
-	 	}
-
-	 	.article.show {
-	 		display: flex;
-	 	}
-
-	 	.article__item {
-	 		margin-bottom: 20px;
-	 	}
-
-	 	.article__item:last-child {
-	 		margin-bottom: 0;
-	 	}
-
-	 	.article-header {
-	 		position: relative;
-	 	}
-
-	 	.article-header__button {
-	 		left: 0;
-	 		position: absolute;
-	 		width: 40px;
-	 	}
-
-	 	.article-header__button:hover {
-	 		opacity: 0.7;
-	 	}
-
-	 	.article-header__button::after {
-	 		content: '';
-	 		width: 9px;
-			display: block;
-			border-width: 0 0 2px 2px;
-			border-color: #F5F5F5;
-			border-style: solid;
-			transform: rotate(45deg);
-			height: 9px;
-			margin: auto;
-	 	}
-
-	 	.article-header__title {
-	 		color: #F5DEB3;
-	 		font-size: 1.4em;
-	 	}
-
-	 	.article-body {
-	 		flex: 1;
-	 		display: flex;
-	 		flex-direction: column;
-	 		overflow: hidden;
-	 	}
-
-	 	.article-footer {
-	 		margin-top: auto;
-	 	}
-
-	 	.article-footer__publication-date {
-	 		color: #F5DEB3;
-	 	}
-
-		.vscrollbar {
-			width: 20px;
-		}
-
-		.vscrollbar__slider {
-			margin: auto;
-			width: 2px;
-			height: 20px;
-			background-color: #F5F5F5;
-			border-radius: 3px;
-			display: none;
-			opacity: 0.7;
-			position: relative;
-		}
-
-		.vscrollbar__slider.active,
-		.vscrollbar__slider:hover {
-			opacity: 1;
-		}
-
-		.vscrollbar.active .vscrollbar__slider {
-			display: block;
-		}
-
-		/*Phone landscape*/
-
-    	@media (min-width: 560px) {
-			p {
-				margin: 0 15% 4%;
-			}
-
-			.main {
-				margin: 0 20%;
-			}
-
-			.card {
-				height: calc(30% - 10px);
-			}
-    	}
-
-    	/*Tablet*/
-
-    	@media (min-width: 700px) 
-    	and (orientation : portrait) {
-			.main {
-				margin: 15% 0;
-			}
-
-			.body {
-				font-size: 1.4em;
-			}
-    	}
-
-    	/*Desktop / Tablet landscape*/
-
-    	@media (min-width: 1000px)
-    	and (orientation : landscape)  {
-    		.body {
-				font-size: 1.1em;
-			}
-
-			.main {
-				margin: 0 15%;
-			}
-
-			.card {
-				height: calc(50% - 10px);
-			}
-
-			.vscrollbar__slider {
-				width: 4px;
-			}
-    	}
-
-    	@media (min-width: 1080px)  {
-    		.articles {
-    			font-size: 0.8em;
-    		}
-
-    		.main {
-				margin: 0 25%;
-			}
-
-			.card__image {
-				background-size: 80% 80%;
-			}
-    	}
+	.body,html{height:100%}button{background:unset;outline:0;border:none;padding:0;height:100%;cursor:pointer}p{margin:0;margin-bottom:24px;line-height:1.6;margin:0 10% 4%}p:last-child{margin-bottom:0}i{height:100%;width:100%;display:block}.i{background-size:100% 100%;background-position:center;background-repeat:no-repeat}.b{font-weight:700}.body{margin:0;color:#f5f5f5;background-color:#000;font-family:Montserrat,sans-serif;font-size:.8em;text-align:center;display:flex;flex-direction:column}.background{position:absolute;height:100%;width:100%;z-index:-2;filter:brightness(15%)}.background__image{display:block;height:100%}.background__image_default{background-image:url(src/image/background/thereasontobehere.jpg)}.main{display:flex;margin:20% 0;padding:20px 0 20px 20px;height:100%;box-sizing:border-box;background-color:rgba(0,0,0,.8);box-shadow:0 0 5px 0 #000}.content{display:flex;width:100%;overflow:hidden;position:relative}.preview{flex:1;display:flex;flex-wrap:wrap;align-content:baseline;justify-content:space-between;font-size:.8em}[class*=show_article] .preview{display:none}.card{cursor:pointer;flex-basis:calc(50% - 10px);height:calc(30.8% - 10px);box-sizing:border-box;margin-bottom:20px;display:flex;flex-direction:column;align-items:center;position:relative}.card>*{pointer-events:none}.card:hover::before{content:'';border-top:2px solid #f5f5f5;top:0;position:absolute;width:100%}.card:hover .card__title{color:wheat}.card_single{margin-left:25%}.card__image{flex:1;width:100%}.card__image_archaizmolog{background-image:url(src/image/preview/archaizmolog.svg)}.card__image_krepost{background-image:url(src/image/preview/krepost.svg)}.card__image_podih{background-image:url(src/image/preview/podih.svg)}.card__image_poslednij-got{background-image:url(src/image/preview/poslednij-got.svg)}.card__image_penie-divno{background-image:url(src/image/preview/penie-divno.svg)}.card__title{display:flex;align-items:center;text-transform:uppercase}.articles{position:absolute;height:100%;width:100%;display:none;font-size:.85em}[class*=show_article] .articles{display:block}.article{display:none;flex-direction:column;height:100%}.article.show{display:flex}.article__item{margin-bottom:20px}.article__item:last-child{margin-bottom:0}.article-header{position:relative}.article-header__button{left:0;position:absolute;width:40px}.article-header__button:hover{opacity:.7}.article-header__button::after{content:'';width:9px;display:block;border-width:0 0 2px 2px;border-color:#f5f5f5;border-style:solid;transform:rotate(45deg);height:9px;margin:auto}.article-header__title{color:wheat;font-size:1.4em}.article-body{flex:1;display:flex;flex-direction:column;overflow:hidden}.article-footer{margin-top:auto}.article-footer__publication-date{color:wheat}.vscrollbar{width:20px}.vscrollbar__slider{margin:auto;width:2px;height:20px;background-color:#f5f5f5;border-radius:3px;display:none;opacity:.7;position:relative}.vscrollbar__slider.active,.vscrollbar__slider:hover{opacity:1}.vscrollbar.active .vscrollbar__slider{display:block}@media (min-width:560px){p{margin:0 15% 4%}.main{margin:0 20%}.card{height:calc(30% - 10px)}}@media (min-width:700px) and (orientation :portrait){.main{margin:15% 0}.body{font-size:1.4em}}@media (min-width:1000px) and (orientation :landscape){.body{font-size:1.1em}.main{margin:0 15%}.card{height:calc(50% - 10px)}}@media (min-width:1080px){.articles{font-size:.8em}.main{margin:0 25%}.card__image{background-size:80% 80%}.vscrollbar__slider{width:4px}}@media (min-width:1366px) and (max-height:1024px){.main{margin:0 15%}}
 	</style>
 </head>
 <body class="body">
@@ -507,182 +181,7 @@
 		</div>
 	</main>
 	<script>
-		'use strict';
-
-		const VScroll = (() => {
-			let content,
-				dragStartY,
-				lastScrollHeight,
-				scrollArea,
-				scrollbar,
-				scrollStep,
-				slider,
-				scrolling,
-				touchStartY,
-				touchStep,
-				watcher,
-				wheelStep;
-
-			const sliderDrag = (e) => {
-				if (scrolling) {
-					const shiftY = Math.ceil((e.pageY - content.getBoundingClientRect().top - dragStartY) * 100 / content.clientHeight);
-					const sliderHeight = slider.clientHeight * 100 / content.clientHeight;
-					const totalShiftY = shiftY + parseInt(sliderHeight);
-
- 					if (shiftY > 0 && totalShiftY < 100) {
- 						slider.style.top = shiftY + '%';
- 						content.scrollTop = shiftY * content.scrollHeight / 100;
- 					}
- 					else if (totalShiftY >= 100) {
- 						slider.style.top = 100 - Math.round(sliderHeight) + '%';
- 						content.scrollTop = content.scrollHeight - content.clientHeight;
- 					}
- 					else if (shiftY <= 0) {
- 						slider.style.top = '0%';
- 						content.scrollTop = 0;
- 					}
-				}
-			};
-
-			const sliderDragStart = (e) => {
-				scrolling = 1;
-				slider.classList.add('active');
-				dragStartY = e.pageY - slider.getBoundingClientRect().top;
-			};
-
-			const sliderDragEnd = (e) => {
-				scrolling = 0;
-				slider.classList.remove('active');
-			};
-
-			const touchMove = (e) => {
-				// if (scrolling) {
-					// e.preventDefault();
-					e = touchStartY - e.touches[0].clientY;
-					content.scrollTop = e > 5 ? content.scrollTop + touchStep 
- 															      : e < -5 ? content.scrollTop - touchStep 
- 																		   : content.scrollTop;
-					updateSliderPosition();
-				// }
-			};
-
-			const touchStart = (e) => {
-				// scrolling = 1;
-				slider.classList.add('active');
-				touchStartY = e.touches[0].clientY;
-			};
-
-			const touchEnd = (e) => {
-				// scrolling = 0;
-				slider.classList.remove('active');
-			};
-
-			const updateSliderPosition = () => {
-				slider.style.top = parseInt(100 * content.scrollTop / content.scrollHeight) + '%';
-			};
-
-			const watch = () => {
-				cancelAnimationFrame(watcher);
-  				if (lastScrollHeight !== content.scrollHeight) {
-    				slider.style.height = Math.ceil(100 * content.clientHeight / content.scrollHeight) + '%';
-    				if (scrollbar.classList.contains('active')) {
-    					if (content.scrollHeight <= content.clientHeight) {
-    						scrollbar.classList.remove('active');
-    					}
-    				}
-    				else {
-    					if (content.scrollHeight > content.clientHeight) {
-    						scrollbar.classList.add('active');
-    					}
-    				}
-  				}
-
-  				lastScrollHeight = content.scrollHeight;
-  				watcher = requestAnimationFrame(watch);
-			};
-
-			const wheel = (e) => {
- 				content.scrollTop = (e = Math.sign(e.deltaY)) > 0 ? content.scrollTop + wheelStep 
- 															      : e < 0 ? content.scrollTop - wheelStep 
- 																		  : content.scrollTop;
- 				updateSliderPosition();
-			};
-
-			const C = function (o) {
-				content = document.querySelector(o.content);
-				scrollArea = o.scrollArea ? document.querySelector(o.scrollArea) : content;
-				scrollArea.onmousemove = sliderDrag;
-				scrollArea.onmouseup = sliderDragEnd;
-				scrollArea.onwheel = wheel;
-				scrollArea.ontouchmove = touchMove;
-				scrollArea.ontouchend = touchEnd;
-				scrollArea.ontouchstart = touchStart;
-				scrollArea.style.overscrollBehavior = o.overscrollBehavior ? o.overscrollBehavior : 'none';
-				scrollbar = document.querySelector(o.scrollbar);
-				scrollbar.style.marginTop = '0px';
-				if (scrollbar.offsetTop !== content.offsetTop) scrollbar.style.marginTop = content.offsetTop + 'px';
-				scrollStep = o.scrollStep || 8;
-				slider = document.querySelector(o.slider);
-				slider.onmousedown = sliderDragStart;
-				touchStep = o.touchStep || 6;
-				watcher = requestAnimationFrame(watch);
-				wheelStep = o.wheelStep || 8;
-				o.scrollRestoration && 'scrollRestoration' in history && (history.scrollRestoration = o.scrollRestoration);
-				updateSliderPosition();
-			};
-
-			return C;
-		})();
-
-		const previewScrollOptions = {
-			content: '.content',
-			scrollArea: '.body',
-			scrollbar: '.vscrollbar',
-			scrollRestoration: 'manual',
-			slider: '.vscrollbar__slider'
-		};
-
-		const articleScrollOptions = {
-            content: '.article.show .article-body',
-            scrollArea: '.body',
-            scrollbar: '.vscrollbar',
-            scrollRestoration: 'manual',
-            slider: '.vscrollbar__slider'
-        };
-
-		new VScroll(previewScrollOptions);
-
-		const eventBindAll = (s, e, f) => {
-			const element = document.querySelectorAll(s);
-			for (s = 0; s < element.length; s++) {
-				element[s].addEventListener(e, f);
-			}
-		};
-
-		const getChildElement = (nodes, className) => {
-			for (let i = 0; i < nodes.length; i++) {
-				if (nodes[i].classList && nodes[i].classList.contains(className)) return nodes[i];
-			}
-		};
-
-		eventBindAll('.card', 'click', (e) => {
-			e = e.target;
-			if (e.dataset.backgroundImage) document.querySelector('.background__image_default').style.backgroundImage = 'url(image/background/' + e.dataset.backgroundImage + ')';
-			document.querySelector('.content').classList.add('show_article_' + e.dataset.articleId);
-			document.querySelector('#' + e.dataset.articleId).classList.add('show');
-			document.querySelector('#' + e.dataset.articleId + ' .article-header__title').textContent = '— ' + getChildElement(e.childNodes, 'card__title').textContent + ' —';
-
-			new VScroll(articleScrollOptions);
-		});
-
-		eventBindAll('.article-header__button_type_back', 'click', (e) => {
-			document.querySelector('.background__image_default').style = '';
-			document.querySelector('.article.show').classList.remove('show');
-			const content = document.querySelector('.content');
-			content.className = content.className.replace(/\s+show[^\s]*/, ''); 
-
-			new VScroll(previewScrollOptions);
-		});
+	"use strict";const VScroll=(()=>{let e,t,l,o,c,r,s,n,a,i,d,u;const h=l=>{if(n){const o=Math.ceil(100*(l.pageY-e.getBoundingClientRect().top-t)/e.clientHeight),c=100*s.clientHeight/e.clientHeight,r=o+parseInt(c);o>0&&r<100?(s.style.top=o+"%",e.scrollTop=o*e.scrollHeight/100):r>=100?(s.style.top=100-Math.round(c)+"%",e.scrollTop=e.scrollHeight-e.clientHeight):o<=0&&(s.style.top="0%",e.scrollTop=0)}},p=e=>{n=1,s.classList.add("active"),t=e.pageY-s.getBoundingClientRect().top},g=e=>{n=0,s.classList.remove("active")},m=t=>{t=a-t.touches[0].clientY,e.scrollTop=t>5?e.scrollTop+i:t<-5?e.scrollTop-i:e.scrollTop,S()},v=e=>{s.classList.add("active"),a=e.touches[0].clientY},y=e=>{s.classList.remove("active")},S=()=>{s.style.top=parseInt(100*e.scrollTop/e.scrollHeight)+"%"},_=()=>{cancelAnimationFrame(d),l!==e.scrollHeight&&(s.style.height=Math.ceil(100*e.clientHeight/e.scrollHeight)+"%",c.classList.contains("active")?e.scrollHeight<=e.clientHeight&&c.classList.remove("active"):e.scrollHeight>e.clientHeight&&c.classList.add("active")),l=e.scrollHeight,d=requestAnimationFrame(_)},b=t=>{e.scrollTop=(t=Math.sign(t.deltaY))>0?e.scrollTop+u:t<0?e.scrollTop-u:e.scrollTop,S()};return function(t){e=document.querySelector(t.content),(o=t.scrollArea?document.querySelector(t.scrollArea):e).onmousemove=h,o.onmouseup=g,o.onwheel=b,o.ontouchmove=m,o.ontouchend=y,o.ontouchstart=v,o.style.overscrollBehavior=t.overscrollBehavior?t.overscrollBehavior:"none",(c=document.querySelector(t.scrollbar)).style.marginTop="0px",c.offsetTop!==e.offsetTop&&(c.style.marginTop=e.offsetTop+"px"),r=t.scrollStep||8,(s=document.querySelector(t.slider)).onmousedown=p,i=t.touchStep||6,d=requestAnimationFrame(_),u=t.wheelStep||8,t.scrollRestoration&&"scrollRestoration"in history&&(history.scrollRestoration=t.scrollRestoration),S()}})(),previewScrollOptions={content:".content",scrollArea:".body",scrollbar:".vscrollbar",scrollRestoration:"manual",slider:".vscrollbar__slider"},articleScrollOptions={content:".article.show .article-body",scrollArea:".body",scrollbar:".vscrollbar",scrollRestoration:"manual",slider:".vscrollbar__slider"};new VScroll(previewScrollOptions);const eventBindAll=(e,t,l)=>{const o=document.querySelectorAll(e);for(e=0;e<o.length;e++)o[e].addEventListener(t,l)},getChildElement=(e,t)=>{for(let l=0;l<e.length;l++)if(e[l].classList&&e[l].classList.contains(t))return e[l]};eventBindAll(".card","click",e=>{(e=e.target).dataset.backgroundImage&&(document.querySelector(".background__image_default").style.backgroundImage="url(src/image/background/"+e.dataset.backgroundImage+")"),document.querySelector(".content").classList.add("show_article_"+e.dataset.articleId),document.querySelector("#"+e.dataset.articleId).classList.add("show"),document.querySelector("#"+e.dataset.articleId+" .article-header__title").textContent="— "+getChildElement(e.childNodes,"card__title").textContent+" —",new VScroll(articleScrollOptions)}),eventBindAll(".article-header__button_type_back","click",e=>{document.querySelector(".background__image_default").style="",document.querySelector(".article.show").classList.remove("show");const t=document.querySelector(".content");t.className=t.className.replace(/\s+show[^\s]*/,""),new VScroll(previewScrollOptions)});
 	</script>
 </body>
 </html>
