--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -4,10 +4,350 @@
 	<title>Архаизмолог</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-	<!-- <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap&subset=cyrillic" rel="stylesheet"> -->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">	
+	<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+	<link rel="manifest" href="site.webmanifest">
+	<link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#2b5797">
+	<meta name="theme-color" content="#ffffff">
 	<style>
-	.body,html{height:100%}button{background:unset;outline:0;border:none;padding:0;height:100%;cursor:pointer}p{margin:0;margin-bottom:24px;line-height:1.6;margin:0 10% 4%}p:last-child{margin-bottom:0}i{height:100%;width:100%;display:block}.i{background-size:100% 100%;background-position:center;background-repeat:no-repeat}.b{font-weight:700}.body{margin:0;color:#f5f5f5;background-color:#000;font-family:Montserrat,sans-serif;font-size:.8em;text-align:center;display:flex;flex-direction:column}.background{position:absolute;height:100%;width:100%;z-index:-2;filter:brightness(15%)}.background__image{display:block;height:100%}.background__image_default{background-image:url(src/image/background/thereasontobehere.jpg)}.main{display:flex;margin:20% 0;padding:20px 0 20px 20px;height:100%;box-sizing:border-box;background-color:rgba(0,0,0,.8);box-shadow:0 0 5px 0 #000}.content{display:flex;width:100%;overflow:hidden;position:relative}.preview{flex:1;display:flex;flex-wrap:wrap;align-content:baseline;justify-content:space-between;font-size:.8em}[class*=show_article] .preview{display:none}.card{cursor:pointer;flex-basis:calc(50% - 10px);height:calc(30.8% - 10px);box-sizing:border-box;margin-bottom:20px;display:flex;flex-direction:column;align-items:center;position:relative}.card>*{pointer-events:none}.card:hover::before{content:'';border-top:2px solid #f5f5f5;top:0;position:absolute;width:100%}.card:hover .card__title{color:wheat}.card_single{margin-left:25%}.card__image{flex:1;width:100%}.card__image_archaizmolog{background-image:url(src/image/preview/archaizmolog.svg)}.card__image_krepost{background-image:url(src/image/preview/krepost.svg)}.card__image_podih{background-image:url(src/image/preview/podih.svg)}.card__image_poslednij-got{background-image:url(src/image/preview/poslednij-got.svg)}.card__image_penie-divno{background-image:url(src/image/preview/penie-divno.svg)}.card__title{display:flex;align-items:center;text-transform:uppercase}.articles{position:absolute;height:100%;width:100%;display:none;font-size:.85em}[class*=show_article] .articles{display:block}.article{display:none;flex-direction:column;height:100%}.article.show{display:flex}.article__item{margin-bottom:20px}.article__item:last-child{margin-bottom:0}.article-header{position:relative}.article-header__button{left:0;position:absolute;width:40px}.article-header__button:hover{opacity:.7}.article-header__button::after{content:'';width:9px;display:block;border-width:0 0 2px 2px;border-color:#f5f5f5;border-style:solid;transform:rotate(45deg);height:9px;margin:auto}.article-header__title{color:wheat;font-size:1.4em}.article-body{flex:1;display:flex;flex-direction:column;overflow:hidden}.article-footer{margin-top:auto}.article-footer__publication-date{color:wheat}.vscrollbar{width:20px}.vscrollbar__slider{margin:auto;width:2px;height:20px;background-color:#f5f5f5;border-radius:3px;display:none;opacity:.7;position:relative}.vscrollbar__slider.active,.vscrollbar__slider:hover{opacity:1}.vscrollbar.active .vscrollbar__slider{display:block}@media (min-width:560px){p{margin:0 15% 4%}.main{margin:0 20%}.card{height:calc(30% - 10px)}}@media (min-width:700px) and (orientation :portrait){.main{margin:15% 0}.body{font-size:1.4em}}@media (min-width:1000px) and (orientation :landscape){.body{font-size:1.1em}.main{margin:0 15%}.card{height:calc(50% - 10px)}}@media (min-width:1080px){.articles{font-size:.8em}.main{margin:0 25%}.card__image{background-size:80% 80%}.vscrollbar__slider{width:4px}}@media (min-width:1366px) and (max-height:1024px){.main{margin:0 15%}}
+		html,
+		.body {
+			height: 100%;
+		}
+
+		button {
+			background: unset;
+			outline: none;
+			border: none;
+			padding: 0;
+			height: 100%;
+			cursor: pointer;
+		}
+
+		p {
+			margin: 0;
+			margin-bottom: 24px;
+			line-height: 1.6;
+			margin: 0 10% 4%;
+		}
+
+		p:last-child {
+			margin-bottom: 0;
+		}
+
+		i {
+			height: 100%;
+			width: 100%;
+			display: block;
+		}
+
+		.i {
+			background-size: 100% 100%;
+			background-position: center;
+			background-repeat: no-repeat;
+		}
+
+		.b {
+			font-weight: bold;
+		}
+
+		.body {
+			margin: 0;
+			color: #F5F5F5;
+			background-color: #000;
+			font-family: 'Montserrat', sans-serif;
+			font-size: 0.8em;
+			text-align: center;
+			display: flex;
+			flex-direction: column;
+		}
+
+		.background {
+			position: absolute;
+			height: 100%;
+			width: 100%;
+			z-index: -2;
+			filter: brightness(15%);
+		}
+
+		.background__image {
+			display: block;
+			height: 100%;
+		}
+
+		.background__image_default {
+			background-image: url(src/image/background/thereasontobehere.jpg);
+			/*background-image: url(src/image/background/fool.jpg);*/
+		}
+
+		.main {
+			display: flex;
+			margin: 20% 0;
+			padding: 20px 0 20px 20px;
+			height: 100%;
+			box-sizing: border-box;
+			background-color: rgba(0, 0, 0, .8);
+			box-shadow: 0px 0px 5px 0px #000;
+		}
+
+		.content {
+			display: flex;
+			width: 100%;
+			overflow: hidden;
+			position: relative;
+		}
+
+		.preview {
+			flex: 1;
+			display: flex;
+			flex-wrap: wrap;
+			align-content: baseline;
+			justify-content: space-between;
+			font-size: 0.8em;
+		}
+
+		[class*=show_article] .preview {
+	 		display: none;
+	 	}
+
+		.card {
+			cursor: pointer;
+			flex-basis: calc(50% - 10px);
+			height: calc(30.8% - 10px);
+  			box-sizing: border-box;
+  			margin-bottom: 20px;
+  			display: flex;
+  			flex-direction: column;
+			align-items: center;
+			position: relative;
+		}
+
+		.card > * {
+			pointer-events: none;
+		}
+
+		.card:hover::before {
+			content: '';
+			border-top: 2px solid #F5F5F5;
+			top: 0;
+			position: absolute;
+			width: 100%;
+		}
+
+		.card:hover .card__title {
+			color: #F5DEB3;
+		}
+
+		.card_single {
+			margin-left: 25%;
+		}
+
+		.card__image {
+			flex: 1;
+			width: 100%;
+	 	}
+
+	 	.card__image_archaizmolog {
+	 		background-image: url(src/image/preview/archaizmolog.svg);
+	 	}
+
+	 	.card__image_krepost {
+	 		background-image: url(src/image/preview/krepost.svg);
+	 	}
+
+	 	.card__image_podih {
+	 		background-image: url(src/image/preview/podih.svg);
+	 	}
+
+	 	.card__image_poslednij-got {
+	 		background-image: url(src/image/preview/poslednij-got.svg);
+	 	}
+
+	 	.card__image_penie-divno {
+	 		background-image: url(src/image/preview/penie-divno.svg);
+	 	}
+
+	 	.card__title {
+	 		display: flex;
+	 		align-items: center;
+	 		text-transform: uppercase;
+	 	}
+
+	 	.articles {
+	 		position: absolute;
+	 		height: 100%;
+	 		width: 100%;
+	 		display: none;
+	 		font-size: 0.85em;
+	 	}
+
+	 	[class*=show_article] .articles {
+	 		display: block;
+	 	}
+
+	 	.article {
+	 		display: none;
+	 		flex-direction: column;
+	 		height: 100%;
+	 	}
+
+	 	.article.show {
+	 		display: flex;
+	 	}
+
+	 	.article__item {
+	 		margin-bottom: 20px;
+	 	}
+
+	 	.article__item:last-child {
+	 		margin-bottom: 0;
+	 	}
+
+	 	.article-header {
+	 		position: relative;
+	 	}
+
+	 	.article-header__button {
+	 		left: 0;
+	 		position: absolute;
+	 		width: 40px;
+	 	}
+
+	 	.article-header__button:hover {
+	 		opacity: 0.7;
+	 	}
+
+	 	.article-header__button::after {
+	 		content: '';
+	 		width: 9px;
+			display: block;
+			border-width: 0 0 2px 2px;
+			border-color: #F5F5F5;
+			border-style: solid;
+			transform: rotate(45deg);
+			height: 9px;
+			margin: auto;
+	 	}
+
+	 	.article-header__title {
+	 		color: #F5DEB3;
+	 		font-size: 1.4em;
+	 	}
+
+	 	.article-body {
+	 		flex: 1;
+	 		display: flex;
+	 		flex-direction: column;
+	 		overflow: hidden;
+	 	}
+
+	 	.article-footer {
+	 		margin-top: auto;
+	 	}
+
+	 	.article-footer__publication-date {
+	 		color: #F5DEB3;
+	 	}
+
+		.vscrollbar {
+			width: 20px;
+		}
+
+		.vscrollbar__slider {
+			margin: auto;
+			width: 2px;
+			height: 20px;
+			background-color: #F5F5F5;
+			border-radius: 3px;
+			display: none;
+			opacity: 0.7;
+			position: relative;
+		}
+
+		.vscrollbar__slider.active,
+		.vscrollbar__slider:hover {
+			opacity: 1;
+		}
+
+		.vscrollbar.active .vscrollbar__slider {
+			display: block;
+		}
+
+		/*Phone landscape*/
+
+    	@media (min-width: 560px) {
+			p {
+				margin: 0 15% 4%;
+			}
+
+			.main {
+				margin: 0 20%;
+			}
+
+			.card {
+				height: calc(30% - 10px);
+			}
+    	}
+
+    	/*Tablet*/
+
+    	@media (min-width: 700px) 
+    	and (orientation : portrait) {
+			.main {
+				margin: 15% 0;
+			}
+
+			.body {
+				font-size: 1.4em;
+			}
+    	}
+
+    	/*Desktop / Tablet landscape*/
+
+    	@media (min-width: 1000px)
+    	and (orientation : landscape)  {
+    		.body {
+				font-size: 1.1em;
+			}
+
+			.main {
+				margin: 0 15%;
+			}
+
+			.card {
+				height: calc(50% - 10px);
+			}
+    	}
+
+    	@media (min-width: 1080px)  {
+    		.articles {
+    			font-size: 0.8em;
+    		}
+
+    		.main {
+				margin: 0 25%;
+			}
+
+			.card__image {
+				background-size: 80% 80%;
+			}
+
+			.vscrollbar__slider {
+				width: 4px;
+			}
+    	}
+
+    	/* iPad Pro */
+
+    	@media (min-width: 1366px)
+		and (max-height: 1024px) {
+			.main {
+				margin: 0 15%;
+			}
+		}
 	</style>
 </head>
 <body class="body">
