--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -150,8 +150,16 @@
 			width: 100%;
 	 	}
 
-	 	.card__image_archaizmolog {
-	 		background-image: url(src/image/preview/archaizmolog.svg);
+	 	.card__image_initium {
+	 		background-image: url(src/image/preview/initium.svg);
+	 	}
+
+	 	.card__image_koster {
+	 		background-image: url(src/image/preview/koster.svg);
+	 	}
+
+	 	.card__image_germetika {
+	 		background-image: url(src/image/preview/germetika.svg);
 	 	}
 
 	 	.card__image_krepost {
@@ -361,9 +369,23 @@
 				<div class="card card_single"
 					 data-article-id="initium" 
 					 data-background-image="initium.jpg">
-					<span class="card__image card__image_archaizmolog i"></span>
+					<span class="card__image card__image_initium i"></span>
 					<span class="card__title">
 						INITIUM
+					</span>
+				</div>
+				<div class="card"
+					 data-article-id="koster">
+					<span class="card__image card__image_koster i"></span>
+					<span class="card__title">
+						Костёр
+					</span>
+				</div>
+				<div class="card"
+					 data-article-id="germetika">
+					<span class="card__image card__image_germetika i"></span>
+					<span class="card__title">
+						Герметика
 					</span>
 				</div>
 				<div class="card"
@@ -388,7 +410,7 @@
 					</span>
 				</div>
 				<div class="card"
-					 data-article-id="poslednij-got">
+					 data-article-id="penie-divno">
 					<span class="card__image card__image_penie-divno i"></span>
 					<span class="card__title">
 						Пение дивно
@@ -421,6 +443,55 @@
 						</div>
 						<div class="article__item article-footer">
 							<span class="article-footer__publication-date">VII / IV / MMXVIII</span>
+						</div>
+					</div>
+				</article>
+				<article id="koster" class="article">
+					<div class="article__item article-header">
+						<button class="article-header__button article-header__button_type_back">
+						</button>
+						<span class="article-header__title"></span>
+					</div>
+					<div class="article__item article-body">
+						<div class="article__item article-content">
+							<p>Не туши свой костёр до рассвета,<br>
+							   Пусть утопит нас матерь всех - тьма.<br>
+							   Вспоминаешь былые моменты,<br>
+							   Вновь коснувшись пальцами дна.<br>
+							   Понимаешь, что ты тут не первый:<br>
+							   Путь из ракушек - жизнь до тебя.</p>
+							<p>Словно якорь стремиться к пучине,<br>
+							   Твой крест - это благо Царя.<br>
+							   Покидай это лоно всех теней,<br>
+							   Покидая забудь про себя.</p>
+							<p>Не туши свой костёр до рассвета,<br>
+							   Пусть утопит нас матерь всех - тьма.<br>
+							   Понимаешь, что ты не последний,<br>
+							   Лицезрея всю прелесть утра.</p>
+						</div>
+						<div class="article__item article-footer">
+							<span class="article-footer__publication-date">II / XII / MMXIX</span>
+						</div>
+					</div>
+				</article>
+				<article id="germetika" class="article">
+					<div class="article__item article-header">
+						<button class="article-header__button article-header__button_type_back">
+						</button>
+						<span class="article-header__title"></span>
+					</div>
+					<div class="article__item article-body">
+						<div class="article__item article-content">
+							<p>Смотри, сколько мастерства в одной только материи.<br>
+							   Сколько искусства собрано в одном только творении;<br>
+							   Везде красота, везде соотношение, везде разнообразие, порядку подчинение.</p>
+							<p>Кто же сделал все это ?! Какая мать, какой отец ?<br>
+							   Если не единственный невидимый мирских вещей Творец,<br>
+							   Который создал все волею Своею, благом окропив<br>
+							   И созерцанием величества всех нас Он одарил.</p>
+						</div>
+						<div class="article__item article-footer">
+							<span class="article-footer__publication-date">II / XII / MMXIX</span>
 						</div>
 					</div>
 				</article>
@@ -511,6 +582,34 @@
 						</div>
 						<div class="article__item article-footer">
 							<span class="article-footer__publication-date">I / X / MMXVIII</span>
+						</div>
+					</div>
+				</article>
+				<article id="penie-divno" class="article">
+					<div class="article__item article-header">
+						<button class="article-header__button article-header__button_type_back">
+						</button>
+						<span class="article-header__title"></span>
+					</div>
+					<div class="article__item article-body">
+						<div class="article__item article-content">
+							<p>Существует бесконечно причин<br>
+							   все вкусы затмить,<br>
+							   Чтобы слушать пение дивы.<br>
+							   Дивный слог твой,<br>
+							   Как на грешную душу елей;<br>
+							   Нутра трепет в преддверии лавины.<br>
+							   Твои речи приемлю вовеки внимать,<br>
+							   Но не мне принимать сие решенье.<br>
+							   Однажды, допев, сомкнутся уста.<br>
+							   Обессилив, отдамся метели.<br>
+							   На всем белом свете не сыскать западни-<br>
+							   Вечный узник леденящей долины.<br>
+							   Сквозь слой тьмы неслышны отголоски добра:<br>
+							   Согревает лишь пение богини.</p>
+						</div>
+						<div class="article__item article-footer">
+							<span class="article-footer__publication-date">XIX / VIII / MMXVIII</span>
 						</div>
 					</div>
 				</article>
