--- a/learnix/index.html
+++ b/learnix/index.html
@@ -7,13 +7,13 @@
     <title>learNIX</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300&display=swap&subset=cyrillic" rel="stylesheet"> 
     <style>
-        body,html{height:100%}body{margin:0;display:flex;font-size:1em;font-family:'Roboto Mono',monospace;text-align:center;background-color:#f5f5f5}ul{list-style-type:none;margin:0;padding:0}a{color:#000;text-decoration:none}::-webkit-scrollbar{width:7px;background-color:#e8e8e8}::-webkit-scrollbar-thumb{background-color:#c8c8c8}.column{display:flex;flex-direction:column}.title{line-height:50px;height:50px;color:#fff}.sidebar{width:25%}.menu-title{background-color:#483d8b}.menu-item{cursor:pointer;line-height:50px;border-bottom:1px solid rgba(0,0,0,.2)}.menu-item .menu-item{border-color:transparent}.menu-item.expand{border-color:rgba(30,144,255,.7)}.menu-item.expand .menu-item.expand{border-color:rgba(0,0,0,.2)}.menu-link{display:block}.menu-link:not(.selected):hover{color:#fff;background-color:#f08080}.menu-list .menu-link.selected{color:#fff;background-color:#1e90ff;cursor:auto}.menu-list .menu-list .menu-link.selected{background-color:#6fb8ff}.menu-list .menu-list .menu-list .menu-link.selected{background-color:#a3d1ff}.menu-link+.menu-list{display:none}.menu-link.selected+.menu-list{display:block}.main{flex:1;box-shadow:inset 0 0 15px -12px #000}.main-title{background-color:#ff8c00}.main-content{flex:1;display:none;overflow-y:auto;scrollbar-width:thin}.main-content.show{display:flex}.main-item{display:flex;font-size:.9em}.main-item{border-bottom:10px solid #f5f5f5}.main-item:last-child{border-bottom:none}.main-info{flex:.25;padding:12.5px;background-color:bisque}.main-info__from::before{content:'от: '}.main-date{margin-bottom:10px}.main-data{flex:auto;padding:12.5px;background-color:#ffebcd;text-align:start;word-break:break-word}.main-data__item{margin-bottom:10px}.main-data__item:last-child{margin-bottom:0}.data-message__title{display:block;font-weight:700;margin-bottom:10px}.data-link{color:brown}.data-link:last-child{margin-bottom:0}.data-link::after{content:attr(href)}.github-title{background-color:teal}.github-info{flex:1;text-align:start;overflow-y:auto;scrollbar-width:thin}.github-info__person{padding:12.5px 20px;cursor:pointer;border-bottom:1px solid rgba(0,0,0,.2)}.github-info__person:hover{background-color:#f08080}.github-info__person:hover .github-info__link{color:#fff}.github-info__sur-name{display:block;font-size:1.1em}.github-info__uname{font-size:.9em}
+        body,html{height:100%}body{margin:0;display:flex;font-size:1em;font-family:'Roboto Mono',monospace;text-align:center;background-color:#f5f5f5}ul{list-style-type:none;margin:0;padding:0}a{color:#000;text-decoration:none}::-webkit-scrollbar{width:7px;background-color:#e8e8e8}::-webkit-scrollbar-thumb{background-color:#c8c8c8}.column{display:flex;flex-direction:column}.title{line-height:50px;height:50px;color:#fff}.title::after{content:attr(data-text)}.sidebar{width:25%}.menu-title{background-color:#483d8b}.menu-item{cursor:pointer;line-height:50px;border-bottom:1px solid rgba(0,0,0,.2)}.menu-item .menu-item{border-color:transparent}.menu-item.expand{border-color:rgba(30,144,255,.7)}.menu-item.expand .menu-item.expand{border-color:rgba(0,0,0,.2)}.menu-link{display:block}.menu-link:not(.selected):hover{color:#fff;background-color:#f08080}.menu-list .menu-link.selected{color:#fff;background-color:#1e90ff;cursor:auto}.menu-list .menu-list .menu-link.selected{background-color:#6fb8ff}.menu-list .menu-list .menu-list .menu-link.selected{background-color:#a3d1ff}.menu-link+.menu-list{display:none}.menu-link.selected+.menu-list{display:block}.main{flex:1;box-shadow:inset 0 0 15px -12px #000}.main-title{background-color:#ff8c00}.main-content{flex:1;display:none;overflow-y:auto;scrollbar-width:thin}.main-content.show{display:flex}.main-item{display:flex;font-size:.9em}.main-item{border-bottom:10px solid #f5f5f5}.main-item:last-child{border-bottom:none}.main-info{flex:.25;padding:12.5px;background-color:bisque}.main-info__from::before{content:'от: '}.main-date{margin-bottom:10px}.main-data{flex:auto;padding:12.5px;background-color:#ffebcd;text-align:start;word-break:break-word}.main-data__item{margin-bottom:10px}.main-data__item:last-child{margin-bottom:0}.data-message__title{display:block;font-weight:700;margin-bottom:10px}.data-link{color:brown}.data-link:last-child{margin-bottom:0}.data-link::after{content:attr(href)}.github-title{background-color:teal}.github-info{flex:1;text-align:start;overflow-y:auto;scrollbar-width:thin}.github-info__person{padding:12.5px 20px;cursor:pointer;border-bottom:1px solid rgba(0,0,0,.2)}.github-info__person:hover{background-color:#f08080}.github-info__person:hover .github-info__link{color:#fff}.github-info__sur-name{display:block;font-size:1.1em}.github-info__uname{font-size:.9em}@media (max-width:500px){body{flex-direction:column}.title{position:sticky;top:0}.main{flex:0}.sidebar{width:100%}.sidebar .github-info,.sidebar .menu-list.root{display:none}.sidebar.expand .github-info,.sidebar.expand .menu-list.root{display:initial}}
     </style>
 </head>
 <body>
-    <sidebar class="menu sidebar">
-        <div class="menu-title title">Меню</div>
-        <ul class="menu-list">
+    <sidebar class="menu sidebar expand">
+        <div class="menu-title title" data-text="Меню"></div>
+        <ul class="menu-list root">
             <li class="menu-item">
                 <a class="menu-link">Основной материал</a>
                 <ul class="menu-list">
@@ -47,7 +47,7 @@
         </ul>
     </sidebar>
     <main class="main column">
-        <div class="main-title title"></div>
+        <div class="main-title title">🐨</div>
         <div id="tools-templates" class="main-content column">
             <div class="main-item">
                 <div class="main-data column">
@@ -190,7 +190,7 @@
         </div>
     </main>
     <sidebar class="github sidebar column">
-        <div class="github-title title">GitHub</div>
+        <div class="github-title title" data-text="GitHub"></div>
         <div class="github-info">
             <div class="github-info__person">
                 <a class="github-info__link" href="https://github.com/wellshark" target="_blank">
@@ -297,7 +297,7 @@
         </div>
     </sidebar>
     <script>
-        const go={d:document.createElement("_"),eventBindAll:(e,t,s)=>{const n=document.querySelectorAll(e);for(e=0;e<n.length;e++)n[e].addEventListener(t,s)},get:e=>document.querySelector(e),getAll:e=>document.querySelectorAll(e)},navigateMenu=e=>{(e=e.target).classList.contains("selected")||go.getAll(".menu-item.expand").forEach(t=>{t.contains(e)||(t.classList.remove("expand"),t.childNodes.forEach(e=>{e.classList&&e.classList.remove("selected")}))}),e.classList.add("selected"),e.parentElement.classList.add("expand"),(go.get(".main-content.show")||go.d).classList.remove("show"),(go.get(`#${e.dataset.contentId}`)||go.d).classList.add("show")};go.eventBindAll(".menu-link","click",navigateMenu);
+        console.log("Have a nice day, 👨‍💻 👩‍💻");const go={d:document.createElement("_"),eventBindAll:(e,t,s)=>{const a=document.querySelectorAll(e);for(e=0;e<a.length;e++)a[e].addEventListener(t,s)},get:e=>document.querySelector(e),getAll:e=>document.querySelectorAll(e)},navigateMenu=e=>{(e=e.target).classList.contains("selected")||(go.getAll(".menu-item.expand").forEach(t=>{t.contains(e)||(t.classList.remove("expand"),t.childNodes.forEach(e=>{e.classList&&e.classList.remove("selected")}))}),e.classList.add("selected"),e.parentElement.classList.add("expand"),(go.get(".main-content.show")||go.d).classList.remove("show"),e.dataset.contentId&&(go.getAll(".sidebar").forEach(e=>{e.classList.remove("expand")}),(go.get(`#${e.dataset.contentId}`)||go.d).classList.add("show")))};go.eventBindAll(".sidebar","click",e=>{(e=e.target.parentElement).classList.contains("sidebar")&&e.classList.toggle("expand")}),go.eventBindAll(".menu-link","click",navigateMenu),go.eventBindAll(".main-title","click",()=>{(go.get(".main-content.show")||go.d).classList.remove("show"),go.getAll(".menu-item.expand").forEach(e=>{e.classList.remove("expand"),e.childNodes.forEach(e=>{e.classList&&e.classList.remove("selected")})})});
     </script>
 </body>
 </html>
